Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85918

Focus set to wrong dialog in case of enter transition

XMLWordPrintable

    • ff7551a09d8a1e4f10e323a4f899cd1d1c2175a4 (qt/tqtc-qtquickcontrols2/5.15) 690af8c89dbc78c744cb6136a15829b80433bd7a (qt/qtdeclarative/dev) a37a555c96ecc3e5461b0abbc89091fe3f8345a1 (qt/qtdeclarative/6.2)

      In case of a dialog,say dialog2, is opened while the enter transition of another dialog, dialog1, is running, the focus is given to dialog1 when transition is finished.
      Ideally, Dialog 2 is opened after dialog1, dialog2 should get the focus.
      Please refer to attached sample. Press left key, dailog1 and dialog2 get opened, Press any key, you will see that focus will be set to dialog1 once transition finishes.

      Usecase: when the user clicks on a button to open a dialog and there is another dialog in the transition process. User does not want to set focus to dialog that was in the transition phase. The focus should be to latest dialog opened by the user.

        1. qtbug85918.zip
          2 kB
          Shveta Mittal
        For Gerrit Dashboard: QTBUG-85918
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            shmittal Shveta Mittal
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes