Give focus to popup on prepareEnter instead of finalizeEnter

If focus is given on finalize, then popups that have enter transitions
may end up stealing focus from popups that were opened later.

Note: Qt 6.x needs a separate task, as qtquickcontrols2 is inside
qtdeclarative. Otherwise the commits are identical.
Dev version can be found here:
https://codereview.qt-project.org/c/qt/qtdeclarative/+/376858

Fixes: QTBUG-85918
Change-Id: If58b4278edeea8673e56c25d899cd4e3c4765edc
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>